--- a/index.html
+++ b/index.html
@@ -192,6 +192,104 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
+                    <div class="d-flex mb-4">
+                        <div class="profile-picture rounded-circle me-3"></div>
+                        <div>
+                            <a href="#" class="fw-bold mb-0 text-dark text-decoration-none">WalterWolz</a>
+                            <small class="text-muted d-block">Walter Celiz</small>
+                        </div>
+                    </div>
+
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <div class="d-flex">
+                                <p class="text-muted fw-bold flex-grow-1">storys</p>
+                                <small class="fw-bold"><a href="#" class="text-decoration-none text-dark">Ver
+                                        todas</a></small>
+                            </div>
+
+                            <div class="storys-container">
+                                <div class="d-flex mb-4">
+                                    <div class="profile-picture rounded-circle me-3"></div>
+                                    <div class="">
+                                        <a href="#"
+                                            class="text-dark text-decoration-none d-block fw-bold">deportivosmexico</a>
+                                        <small class="text-uppercase text-muted">Hace 3 semanas</small>
+                                    </div>
+                                </div>
+                                <div class="d-flex mb-4">
+                                    <div class="profile-picture rounded-circle me-3"></div>
+                                    <div class="">
+                                        <a href="#"
+                                            class="text-dark text-decoration-none d-block fw-bold">deportivosmexico</a>
+                                        <small class="text-uppercase text-muted">Hace 3 semanas</small>
+                                    </div>
+                                </div>
+                                <div class="d-flex mb-4">
+                                    <div class="profile-picture rounded-circle me-3"></div>
+                                    <div class="">
+                                        <a href="#"
+                                            class="text-dark text-decoration-none d-block fw-bold">deportivosmexico</a>
+                                        <small class="text-uppercase text-muted">Hace 3 semanas</small>
+                                    </div>
+                                </div>
+                                <div class="d-flex mb-4">
+                                    <div class="profile-picture rounded-circle me-3"></div>
+                                    <div class="">
+                                        <a href="#"
+                                            class="text-dark text-decoration-none d-block fw-bold">deportivosmexico</a>
+                                        <small class="text-uppercase text-muted">Hace 3 semanas</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <div class="d-flex">
+                                <p class="text-muted fw-bold flex-grow-1">Sugerencias para ti</p>
+                                <small class="fw-bold"><a href="#" class="text-decoration-none text-dark">Ver
+                                        todo</a></small>
+                            </div>
+
+                            <div class="d-flex mb-4">
+                                <div class="profile-picture rounded-circle me-3"></div>
+                                <div class="">
+                                    <a href="#"
+                                        class="text-dark text-decoration-none d-block fw-bold">deportivosmexico</a>
+                                    <small class="text-muted">Nuevo en instagram</small>
+                                </div>
+                                <div class="d-flex flex-grow-1">
+                                    <a href="#" class="ms-auto fw-bold text-decoration-none">Seguir</a>
+                                </div>
+                            </div>
+                            <div class="d-flex mb-4">
+                                <div class="profile-picture rounded-circle me-3"></div>
+                                <div class="">
+                                    <a href="#"
+                                        class="text-dark text-decoration-none d-block fw-bold">deportivosmexico</a>
+                                    <small class="text-muted">Nuevo en instagram</small>
+                                </div>
+                                <div class="d-flex flex-grow-1">
+                                    <a href="#" class="ms-auto fw-bold text-decoration-none">Seguir</a>
+                                </div>
+                            </div>
+                            <div class="d-flex">
+                                <div class="profile-picture rounded-circle me-3"></div>
+                                <div class="">
+                                    <a href="#"
+                                        class="text-dark text-decoration-none d-block fw-bold">deportivosmexico</a>
+                                    <small class="text-muted">Nuevo en instagram</small>
+                                </div>
+                                <div class="d-flex flex-grow-1">
+                                    <a href="#" class="ms-auto fw-bold text-decoration-none">Seguir</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <small class="text-muted">® 2021 INSTAGRAM FROM META</small>
 
                 </div>
             </div>
