--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="d-flex mb-4">
+                    <div class="d-flex mb-4 mt-4">
                         <div class="profile-picture rounded-circle me-3"></div>
                         <div>
                             <a href="#" class="fw-bold mb-0 text-dark text-decoration-none">WalterWolz</a>
